@@ -298,6 +298,7 @@ static PRIV flag_privs[] = {
   {"odark", '\0', F_ODARK, F_ODARK},
   {"disabled", '\0', F_DISABLED, F_DISABLED},
   {"log", '\0', F_LOG, F_LOG},
+  {"event", '\0', F_EVENT, F_EVENT},
   {NULL, '\0', 0, 0}
 };
 
@@ -1929,8 +1930,10 @@ set_flag(dbref player, dbref thing, const char *flag, int negate,
     /* log if necessary */
     if (f->perms & F_LOG)
       do_log(LT_WIZ, player, thing, "%s FLAG CLEARED", f->name);
+    if (f->perms & F_EVENT)
+      queue_event(player, "OBJECT`FLAG", "%s,%s,%s,%d,%s", unparse_objid(thing), f->name, "FLAG", 0, "CLEARED");
     /* notify the area if something stops listening, but only if it
-       wasn't listening before */
+       was listening before */
     if (!IsPlayer(thing) && (hear || listener) &&
         !Hearer(thing) && !Listener(thing)) {
       tp = tbuf1;
@@ -1980,6 +1983,8 @@ set_flag(dbref player, dbref thing, const char *flag, int negate,
     /* log if necessary */
     if (f->perms & F_LOG)
       do_log(LT_WIZ, player, thing, "%s FLAG SET", f->name);
+    if (f->perms & F_EVENT)
+      queue_event(player, "OBJECT`FLAG", "%s,%s,%s,%d,%s", unparse_objid(thing), f->name, "FLAG", 1, "SET");
     if (is_flag(f, "TRUST") && GoodObject(Zone(thing)))
       notify(player, T("Warning: Setting trust flag on zoned object"));
     if (is_flag(f, "SHARED"))
@@ -2100,6 +2105,10 @@ set_power(dbref player, dbref thing, const char *flag, int negate)
   if (f->perms & F_LOG)
     do_log(LT_WIZ, player, thing, "%s POWER %s", f->name,
            negate ? T("CLEARED") : T("SET"));
+  if (f->perms & F_EVENT) {
+    queue_event(player, "OBJECT`FLAG", "%s,%s,%s,%d,%s", unparse_objid(thing),
+                f->name, "POWER", !negate, (negate ? "CLEARED" : "SET"));
+  }
 }
 
 /** Check if an object has one or all of a list of flag characters.
